--- a/Satori/Pages/SprintBoard/SprintBoards.razor.css
+++ b/Satori/Pages/SprintBoard/SprintBoards.razor.css
@@ -17,6 +17,12 @@
     transform: scale(1.1);
 }
 
+table {
+    table-layout: fixed;
+}
+th,td {
+    overflow: hidden;
+}
 .work-item {
     display: table-row;
 }
